# Lani-assistant

./: .gitignore  Dockerfile  README.md  package.json  render.yaml
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/launchd/: com.lani.backend.plist
services/orchestrator/: .env.example  Dockerfile  assistant.db.bak.1773675115  pyproject.toml  requirements.txt
services/orchestrator/app/: main.py
services/orchestrator/app/core/: __init__.py  auth.py  config.py  database.py  logging.py  security.py
services/orchestrator/app/models/: approval_request.py  audit_log.py  connector_account.py  connector_token.py  conversation.py  episodic_memory.py  eval_log.py  feedback.py  installed_skill.py  installed_skill_version.py  memory_entry.py  mission.py  mission_checkpoint.py  mode.py  profile.py  settings.py  skill_draft.py  skill_proposal.py  token_ledger.py  user.py  voice_profile.py
services/orchestrator/app/schemas/: approvals.py  builder.py  commands.py  connectors.py  feedback.py  memory.py  operator.py  plan.py  research.py  settings.py  tools.py  voice.py  wake.py  workflow.py
services/orchestrator/app/services/: agent_loop.py  approval_service.py  audio_fingerprint.py  audit_chain.py  audit_service.py  (+53 more)
services/orchestrator/tests/: conftest.py  test_external_tools.py  test_installed_skills.py  test_llm_multimodal_service.py  test_llm_response_utils.py  test_llm_text_service.py  test_llm_tool_calling_service.py  test_missions.py  test_modes.py  test_new_layers.py  test_profiles.py  test_skill_drafts.py  test_skill_proposals.py  test_smoke.py
(+216 files in other folders)
